Rewrite desktop on maplibre-native-ffi (#834)
Co-authored-by: sargunv-bot <304244471+sargunv-bot@users.noreply.github.com>
Co-authored-by: Sargun Vohra <1320357+sargunv@users.noreply.github.com>